--- a/style.css
+++ b/style.css
@@ -894,3 +894,163 @@ background-clip: text;
         top: 620px;
     }
 }
+@media (max-width: 450px){
+    .nav{
+        margin: 0px 10px;
+        position: absolute;
+        left: 0%;
+        top: 10%;
+    }
+
+    .page1 h3{
+        font-size: 1.5rem;
+        left: 1%;
+        top: 70px;
+        width: 100%;
+    }
+    .page1btn{
+        left: 27%;
+        top: 420px;
+    }
+
+    .page1 img{
+        display: block;
+        width: 150px;
+        height: 150px;
+        left: 140px;
+        top: 260px;
+    }
+
+    .page2h2{
+        left: 0%;
+        top: 20px;
+    }
+    #para{
+        position: absolute;
+        left: 2%;
+        top: 150px;
+        text-align: left;
+        font-size: 30px;
+        width: 100%;
+        line-height: 40px;
+    }
+    .page2{
+        flex-direction: column;
+    }
+    .page2leftcard{
+        width: 100%;
+        left: 0%;
+        height: 400px;
+        top: 450px;
+    }
+    .page2leftside h3{
+        font-size: 50px;
+        margin-bottom: 20px;
+        margin-top: 30px;
+    }
+    .page2leftside h4{
+        font-size: 25px;
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
+    .page2leftside h5{
+        font-size: 25px;
+        margin-top: 0px;
+    }
+    .page2rightcard{
+        width: 100%;
+        left: 0%;
+        top: 900px;
+        height: 400px;
+    }
+    #abcd {
+        font-size: 45px;
+        margin-bottom: 20px;
+        margin-top: 30px;
+    }
+    #efgh{
+        font-size: 25px;
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
+    .page2rightside h5{
+        font-size: 25px;
+        margin-top: 0px;
+    }
+
+    #page3h2{
+        top: 290px;
+        font-size: 2rem;
+        left: 0%;
+    }
+    #scroller{
+        top: 450px;
+    }
+    #project{
+        top: 420px;
+    }
+    #page3right video{
+        top: 330px;
+        left: 13%;
+        width: 300px;
+        height: 200px;
+    }
+    #project h2{
+        font-size: 40px;
+        font-weight: 700;
+        position: absolute;
+        top: 150px;
+        left: 0px;
+    }
+    #project h3{
+        font-size: 33px;
+        font-weight: 600;
+        position: absolute;
+        top: 250px;
+        left: 0px;
+        width: 100%;
+        align-items: center;
+    }
+    #project h5{
+        font-size: 30px;
+        font-weight: 600;
+        position: absolute;
+        top: 720px;
+        left: 0px;
+        width: 100%;
+        align-items: center;
+    }
+    #elem3{
+        margin-top: 220px;
+    }
+    #elem3 h2{
+        font-size: 40px;
+        font-weight: 700;
+        position: absolute;
+        top: 100px;
+    }
+    #elem3 h4{
+        left: 0;
+        top: 50px;
+    }
+    #elem3 p{
+        font-size: 25px;
+        font-weight: 600;
+        margin-top: 20px;
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        top: 200px;
+    }
+    #leftcard{
+        top: 420px;
+        left: 4%;
+    }
+    #rightcard{
+        top: 540px;
+        left: 4%;
+    }
+    #social{
+        top: 620px;
+    }
+}
