--- a/style.css
+++ b/style.css
@@ -54,18 +54,18 @@ nav{
     /* position: absolute; */
     margin: 10px 30px;
     z-index: 30000;
-    width: 95%;
+    max-width: 95%;
     z-index: 1000;
     top: 10px;
     left: 30px;
     background-color: #f3f3f35a;
-    height: 100px;
+    min-height: 6.25em;
     border-radius: 20px;
     transition: top 0.3s ease-in-out;
     /* background-color: blue; */
 }
 .page1h2{
-    font-size: 30px;
+    font-size: 1.875em;
     font-weight: 700;
     position: absolute;
     /* top: 25px; */
@@ -78,8 +78,8 @@ nav{
 background-clip: text;
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 3.125em;
+    margin-bottom: 3.125em;
 }
 .logo{
     display: flex;
@@ -134,31 +134,35 @@ nav i{
     position: relative;
 }
 .homepagevideo{
-    width: 90vw;
+    max-width: 90vw;
     /* margin-top: 60px; */
-    height: 90vh;
+    min-height: 90vh;
     object-fit: contain;
     z-index: -1; 
     margin: 0px 60px;
     border-radius: 20px;
     filter: blur(2px);
-    box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
+    box-shadow: rgba(255, 255, 255, 0.35) 0rem 0.3125rem  0.9375rem ;
 }
 @media (max-width: 1000px){
     video{
         width: 90vw;
         height: auto;
+        border-radius: 20px;
+    }
+    .homepagevideo{
+        box-shadow: none;
     }
     .page1 {
         align-items: center; /* Center content */
     }
 }
 .page1 h3{
-    font-size: 50px;
+    font-size: 3.125em;
     font-weight: 700;
     text-align: center;
     margin-top: 50px;
-    width: 630px;
+    max-width: 630px ;
     font-family: "Bebas Neue", sans-serif;
     position: absolute;
     left: 60px;
@@ -177,8 +181,8 @@ nav i{
 }
 
 .profilpic{
-    width: 250px;
-    height: 250px;
+    width: 15.625em;
+    height: 15.625em;
     object-fit: cover;
     border-radius: 50%;
     position: absolute;
@@ -193,8 +197,8 @@ nav i{
     display: flex;
     justify-content: center;
     margin-top: 50px;
-    width: 200px;
-    height: 70px;
+    height: 4.375em;
+    width: 12.5em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -203,7 +207,7 @@ nav i{
     position: absolute;
     top: 400px;
     left: 270px;
-    font-size: 15px;
+    font-size: 0.9375em;
     font-weight: 800;
     border: #ffffff 0.5px solid;
     border-radius: 10px;
@@ -212,7 +216,7 @@ nav i{
     transition: transform 0.5s ease-in-out;
 }
 .page1btn i{
-    font-size: 20px;
+    font-size: 1.25em;
     font-weight: 800;
     /* display: none; */
 }
@@ -241,7 +245,7 @@ nav i{
 }
 
 .page2h2{
-    font-size: 50px;
+    font-size: 3.125em;
     font-weight: 700;
     top: 25px;
     position: absolute;
@@ -250,10 +254,10 @@ nav i{
 }
 
 .page2 p{
-    font-size: 30px;
+    font-size: 1.875em;
     text-align: center;
     font-family: "Open Sans", sans-serif; ;
-    width: 900px;
+    max-width: 900px;
     font-family: "Bebas Neue", sans-serif;
     position: absolute;
     left: 13.5%;
